Parsing/ass4_21CS10078_22CS10054.output
Terminals which are not used

   STRUCT
   TYPEDEF
   UNION
   HASH
   INVALID_TOKEN


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | INTEGER_CONSTANT
    3                   | FLOATING_CONSTANT
    4                   | CHARACTER_CONSTANT
    5                   | STRING_LITERAL
    6                   | LEFT_PARENTHESES expression RIGHT_PARENTHESES

    7 postfix_expression: primary_expression
    8                   | postfix_expression LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET
    9                   | postfix_expression LEFT_PARENTHESES argument_expression_list_opt RIGHT_PARENTHESES
   10                   | postfix_expression DOT IDENTIFIER
   11                   | postfix_expression ARROW IDENTIFIER
   12                   | postfix_expression INCREMENT
   13                   | postfix_expression DECREMENT
   14                   | LEFT_PARENTHESES type_name RIGHT_PARENTHESES LEFT_CURLY_BRACKET initialiser_list RIGHT_CURLY_BRACKET
   15                   | LEFT_PARENTHESES type_name RIGHT_PARENTHESES LEFT_CURLY_BRACKET initialiser_list COMMA RIGHT_CURLY_BRACKET

   16 argument_expression_list_opt: argument_expression_list
   17                             | /* empty */

   18 argument_expression_list: assignment_expression
   19                         | argument_expression_list COMMA assignment_expression

   20 unary_expression: postfix_expression
   21                 | INCREMENT unary_expression
   22                 | DECREMENT unary_expression
   23                 | unary_operator cast_expression
   24                 | SIZEOF unary_expression
   25                 | SIZEOF LEFT_PARENTHESES type_name RIGHT_PARENTHESES

   26 unary_operator: BITWISE_AND
   27               | ASTERISK
   28               | PLUS
   29               | MINUS
   30               | TILDE
   31               | EXCLAMATION

   32 cast_expression: unary_expression
   33                | LEFT_PARENTHESES type_name RIGHT_PARENTHESES cast_expression

   34 multiplicative_expression: cast_expression
   35                          | multiplicative_expression ASTERISK cast_expression
   36                          | multiplicative_expression SLASH cast_expression
   37                          | multiplicative_expression MODULO cast_expression

   38 additive_expression: multiplicative_expression
   39                    | additive_expression PLUS multiplicative_expression
   40                    | additive_expression MINUS multiplicative_expression

   41 shift_expression: additive_expression
   42                 | shift_expression LEFT_SHIFT additive_expression
   43                 | shift_expression RIGHT_SHIFT additive_expression

   44 relational_expression: shift_expression
   45                      | relational_expression LESS_THAN shift_expression
   46                      | relational_expression GREATER_THAN shift_expression
   47                      | relational_expression LESS_EQUAL_THAN shift_expression
   48                      | relational_expression GREATER_EQUAL_THAN shift_expression

   49 equality_expression: relational_expression
   50                    | equality_expression EQUALS relational_expression
   51                    | equality_expression NOT_EQUALS relational_expression

   52 AND_expression: equality_expression
   53               | AND_expression BITWISE_AND equality_expression

   54 exclusive_OR_expression: AND_expression
   55                        | exclusive_OR_expression BITWISE_XOR AND_expression

   56 inclusive_OR_expression: exclusive_OR_expression
   57                        | inclusive_OR_expression BITWISE_OR exclusive_OR_expression

   58 logical_AND_expression: inclusive_OR_expression
   59                       | logical_AND_expression LOGICAL_AND inclusive_OR_expression

   60 logical_OR_expression: logical_AND_expression
   61                      | logical_OR_expression LOGICAL_OR logical_AND_expression

   62 conditional_expression: logical_OR_expression
   63                       | logical_OR_expression QUESTION_MARK expression COLON conditional_expression

   64 assignment_expression: conditional_expression
   65                      | unary_expression assignment_operator assignment_expression

   66 assignment_operator: ASSIGNMENT
   67                    | ASTERISK_ASSIGNMENT
   68                    | SLASH_ASSIGNMENT
   69                    | MODULO_ASSIGNMENT
   70                    | PLUS_ASSIGNMENT
   71                    | MINUS_ASSIGNMENT
   72                    | LEFT_SHIFT_ASSIGNMENT
   73                    | RIGHT_SHIFT_ASSIGNMENT
   74                    | BITWISE_AND_ASSIGNMENT
   75                    | BITWISE_XOR_ASSIGNMENT
   76                    | BITWISE_OR_ASSIGNMENT

   77 expression: assignment_expression
   78           | expression COMMA assignment_expression

   79 constant_expression: conditional_expression

   80 declaration: declaration_specifiers init_declarator_list_opt SEMI_COLON

   81 init_declarator_list_opt: init_declarator_list
   82                         | /* empty */

   83 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   84                       | type_specifier declaration_specifiers_opt
   85                       | type_qualifier declaration_specifiers_opt
   86                       | function_specifier declaration_specifiers_opt

   87 declaration_specifiers_opt: declaration_specifiers
   88                           | /* empty */

   89 init_declarator_list: init_declarator
   90                     | init_declarator_list COMMA init_declarator

   91 init_declarator: declarator
   92                | declarator ASSIGNMENT initialiser

   93 storage_class_specifier: EXTERN
   94                        | STATIC
   95                        | AUTO
   96                        | REGISTER

   97 type_specifier: VOID
   98               | CHAR
   99               | SHORT
  100               | INT
  101               | LONG
  102               | FLOAT
  103               | DOUBLE
  104               | SIGNED
  105               | UNSIGNED
  106               | _BOOL
  107               | _COMPLEX
  108               | _IMAGINARY
  109               | enum_specifier

  110 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  111                         | type_qualifier specifier_qualifier_list_opt

  112 specifier_qualifier_list_opt: specifier_qualifier_list
  113                             | /* empty */

  114 enum_specifier: ENUM identifier_opt LEFT_CURLY_BRACKET enumerator_list RIGHT_CURLY_BRACKET
  115               | ENUM identifier_opt LEFT_CURLY_BRACKET enumerator_list COMMA RIGHT_CURLY_BRACKET
  116               | ENUM IDENTIFIER

  117 identifier_opt: IDENTIFIER
  118               | /* empty */

  119 enumerator_list: enumerator
  120                | enumerator_list COMMA enumerator

  121 enumerator: IDENTIFIER
  122           | IDENTIFIER ASSIGNMENT constant_expression

  123 type_qualifier: CONST
  124               | RESTRICT
  125               | VOLATILE

  126 function_specifier: INLINE

  127 declarator: pointer_opt direct_declarator

  128 pointer_opt: pointer
  129            | /* empty */

  130 direct_declarator: IDENTIFIER
  131                  | LEFT_PARENTHESES declarator RIGHT_PARENTHESES
  132                  | direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list_opt assignment_expression_opt RIGHT_SQUARE_BRACKET
  133                  | direct_declarator LEFT_SQUARE_BRACKET STATIC type_qualifier_list_opt assignment_expression RIGHT_SQUARE_BRACKET
  134                  | direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list STATIC assignment_expression RIGHT_SQUARE_BRACKET
  135                  | direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list_opt ASTERISK RIGHT_SQUARE_BRACKET
  136                  | direct_declarator LEFT_PARENTHESES parameter_type_list RIGHT_PARENTHESES
  137                  | direct_declarator LEFT_PARENTHESES identifier_list_opt RIGHT_PARENTHESES

  138 type_qualifier_list_opt: type_qualifier_list
  139                        | /* empty */

  140 assignment_expression_opt: assignment_expression
  141                          | /* empty */

  142 identifier_list_opt: identifier_list
  143                    | /* empty */

  144 pointer: ASTERISK type_qualifier_list_opt
  145        | ASTERISK type_qualifier_list_opt pointer

  146 type_qualifier_list: type_qualifier
  147                    | type_qualifier_list type_qualifier

  148 parameter_type_list: parameter_list
  149                    | parameter_list COMMA ELLIPSIS

  150 parameter_list: parameter_declaration
  151               | parameter_list COMMA parameter_declaration

  152 parameter_declaration: declaration_specifiers declarator
  153                      | declaration_specifiers

  154 identifier_list: IDENTIFIER
  155                | identifier_list COMMA IDENTIFIER

  156 type_name: specifier_qualifier_list

  157 initialiser: assignment_expression
  158            | LEFT_CURLY_BRACKET initialiser_list RIGHT_CURLY_BRACKET
  159            | LEFT_CURLY_BRACKET initialiser_list COMMA RIGHT_CURLY_BRACKET

  160 initialiser_list: designation_opt initialiser
  161                 | initialiser_list COMMA designation_opt initialiser

  162 designation_opt: designation
  163                | /* empty */

  164 designation: designator_list ASSIGNMENT

  165 designator_list: designator
  166                | designator_list designator

  167 designator: LEFT_SQUARE_BRACKET constant_expression RIGHT_SQUARE_BRACKET
  168           | DOT IDENTIFIER

  169 statement: labeled_statement
  170          | compound_statement
  171          | expression_statement
  172          | selection_statement
  173          | iteration_statement
  174          | jump_statement

  175 labeled_statement: IDENTIFIER COLON statement
  176                  | CASE constant_expression COLON statement
  177                  | DEFAULT COLON statement

  178 compound_statement: LEFT_CURLY_BRACKET block_item_list_opt RIGHT_CURLY_BRACKET

  179 block_item_list_opt: block_item_list
  180                    | /* empty */

  181 block_item_list: block_item
  182                | block_item_list block_item

  183 block_item: declaration
  184           | statement

  185 expression_statement: expression_opt SEMI_COLON

  186 expression_opt: expression
  187               | /* empty */

  188 selection_statement: IF LEFT_PARENTHESES expression RIGHT_PARENTHESES statement
  189                    | IF LEFT_PARENTHESES expression RIGHT_PARENTHESES statement ELSE statement
  190                    | SWITCH LEFT_PARENTHESES expression RIGHT_PARENTHESES statement

  191 iteration_statement: WHILE LEFT_PARENTHESES expression RIGHT_PARENTHESES statement
  192                    | DO statement WHILE LEFT_PARENTHESES expression RIGHT_PARENTHESES SEMI_COLON
  193                    | FOR LEFT_PARENTHESES expression_opt SEMI_COLON expression_opt SEMI_COLON expression_opt RIGHT_PARENTHESES statement
  194                    | FOR LEFT_PARENTHESES declaration expression_opt SEMI_COLON expression_opt RIGHT_PARENTHESES statement

  195 jump_statement: GOTO IDENTIFIER SEMI_COLON
  196               | CONTINUE SEMI_COLON
  197               | BREAK SEMI_COLON
  198               | RETURN expression_opt SEMI_COLON

  199 translation_unit: external_declaration
  200                 | translation_unit external_declaration

  201 external_declaration: function_definition
  202                     | declaration

  203 function_definition: declaration_specifiers declarator declaration_list_opt compound_statement

  204 declaration_list_opt: declaration_list
  205                     | /* empty */

  206 declaration_list: declaration
  207                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
error (256)
AUTO (258) 95
BREAK (259) 197
CASE (260) 176
CHAR (261) 98
CONST (262) 123
CONTINUE (263) 196
DEFAULT (264) 177
DO (265) 192
DOUBLE (266) 103
ELSE (267) 189
ENUM (268) 114 115 116
EXTERN (269) 93
FLOAT (270) 102
FOR (271) 193 194
GOTO (272) 195
IF (273) 188 189
INLINE (274) 126
INT (275) 100
LONG (276) 101
REGISTER (277) 96
RESTRICT (278) 124
RETURN (279) 198
SHORT (280) 99
SIGNED (281) 104
SIZEOF (282) 24 25
STATIC (283) 94 133 134
STRUCT (284)
SWITCH (285) 190
TYPEDEF (286)
UNION (287)
UNSIGNED (288) 105
VOID (289) 97
VOLATILE (290) 125
WHILE (291) 191 192
_BOOL (292) 106
_COMPLEX (293) 107
_IMAGINARY (294) 108
IDENTIFIER (295) 1 10 11 116 117 121 122 130 154 155 168 175 195
INTEGER_CONSTANT (296) 2
FLOATING_CONSTANT (297) 3
CHARACTER_CONSTANT (298) 4
STRING_LITERAL (299) 5
LEFT_SQUARE_BRACKET (300) 8 132 133 134 135 167
INCREMENT (301) 12 21
SLASH (302) 36
QUESTION_MARK (303) 63
ASSIGNMENT (304) 66 92 122 164
COMMA (305) 15 19 78 90 115 120 149 151 155 159 161
RIGHT_SQUARE_BRACKET (306) 8 132 133 134 135 167
LEFT_PARENTHESES (307) 6 9 14 15 25 33 131 136 137 188 189 190 191
    192 193 194
LEFT_CURLY_BRACKET (308) 14 15 114 115 158 159 178
RIGHT_CURLY_BRACKET (309) 14 15 114 115 158 159 178
DOT (310) 10 168
ARROW (311) 11
ASTERISK (312) 27 35 135 144 145
PLUS (313) 28 39
MINUS (314) 29 40
TILDE (315) 30
EXCLAMATION (316) 31
MODULO (317) 37
LEFT_SHIFT (318) 42
RIGHT_SHIFT (319) 43
LESS_THAN (320) 45
GREATER_THAN (321) 46
LESS_EQUAL_THAN (322) 47
GREATER_EQUAL_THAN (323) 48
COLON (324) 63 175 176 177
SEMI_COLON (325) 80 185 192 193 194 195 196 197 198
ELLIPSIS (326) 149
ASTERISK_ASSIGNMENT (327) 67
SLASH_ASSIGNMENT (328) 68
MODULO_ASSIGNMENT (329) 69
PLUS_ASSIGNMENT (330) 70
MINUS_ASSIGNMENT (331) 71
LEFT_SHIFT_ASSIGNMENT (332) 72
HASH (333)
DECREMENT (334) 13 22
RIGHT_PARENTHESES (335) 6 9 14 15 25 33 131 136 137 188 189 190 191
    192 193 194
BITWISE_AND (336) 26 53
EQUALS (337) 50
BITWISE_XOR (338) 55
BITWISE_OR (339) 57
LOGICAL_AND (340) 59
LOGICAL_OR (341) 61
RIGHT_SHIFT_ASSIGNMENT (342) 73
NOT_EQUALS (343) 51
BITWISE_AND_ASSIGNMENT (344) 74
BITWISE_OR_ASSIGNMENT (345) 76
BITWISE_XOR_ASSIGNMENT (346) 75
INVALID_TOKEN (347)


Nonterminals, with rules where they appear

$accept (93)
    on left: 0
primary_expression (94)
    on left: 1 2 3 4 5 6, on right: 7
postfix_expression (95)
    on left: 7 8 9 10 11 12 13 14 15, on right: 8 9 10 11 12 13 20
argument_expression_list_opt (96)
    on left: 16 17, on right: 9
argument_expression_list (97)
    on left: 18 19, on right: 16 19
unary_expression (98)
    on left: 20 21 22 23 24 25, on right: 21 22 24 32 65
unary_operator (99)
    on left: 26 27 28 29 30 31, on right: 23
cast_expression (100)
    on left: 32 33, on right: 23 33 34 35 36 37
multiplicative_expression (101)
    on left: 34 35 36 37, on right: 35 36 37 38 39 40
additive_expression (102)
    on left: 38 39 40, on right: 39 40 41 42 43
shift_expression (103)
    on left: 41 42 43, on right: 42 43 44 45 46 47 48
relational_expression (104)
    on left: 44 45 46 47 48, on right: 45 46 47 48 49 50 51
equality_expression (105)
    on left: 49 50 51, on right: 50 51 52 53
AND_expression (106)
    on left: 52 53, on right: 53 54 55
exclusive_OR_expression (107)
    on left: 54 55, on right: 55 56 57
inclusive_OR_expression (108)
    on left: 56 57, on right: 57 58 59
logical_AND_expression (109)
    on left: 58 59, on right: 59 60 61
logical_OR_expression (110)
    on left: 60 61, on right: 61 62 63
conditional_expression (111)
    on left: 62 63, on right: 63 64 79
assignment_expression (112)
    on left: 64 65, on right: 18 19 65 77 78 133 134 140 157
assignment_operator (113)
    on left: 66 67 68 69 70 71 72 73 74 75 76, on right: 65
expression (114)
    on left: 77 78, on right: 6 8 63 78 186 188 189 190 191 192
constant_expression (115)
    on left: 79, on right: 122 167 176
declaration (116)
    on left: 80, on right: 183 194 202 206 207
init_declarator_list_opt (117)
    on left: 81 82, on right: 80
declaration_specifiers (118)
    on left: 83 84 85 86, on right: 80 87 152 153 203
declaration_specifiers_opt (119)
    on left: 87 88, on right: 83 84 85 86
init_declarator_list (120)
    on left: 89 90, on right: 81 90
init_declarator (121)
    on left: 91 92, on right: 89 90
storage_class_specifier (122)
    on left: 93 94 95 96, on right: 83
type_specifier (123)
    on left: 97 98 99 100 101 102 103 104 105 106 107 108 109,
    on right: 84 110
specifier_qualifier_list (124)
    on left: 110 111, on right: 112 156
specifier_qualifier_list_opt (125)
    on left: 112 113, on right: 110 111
enum_specifier (126)
    on left: 114 115 116, on right: 109
identifier_opt (127)
    on left: 117 118, on right: 114 115
enumerator_list (128)
    on left: 119 120, on right: 114 115 120
enumerator (129)
    on left: 121 122, on right: 119 120
type_qualifier (130)
    on left: 123 124 125, on right: 85 111 146 147
function_specifier (131)
    on left: 126, on right: 86
declarator (132)
    on left: 127, on right: 91 92 131 152 203
pointer_opt (133)
    on left: 128 129, on right: 127
direct_declarator (134)
    on left: 130 131 132 133 134 135 136 137, on right: 127 132 133
    134 135 136 137
type_qualifier_list_opt (135)
    on left: 138 139, on right: 132 133 135 144 145
assignment_expression_opt (136)
    on left: 140 141, on right: 132
identifier_list_opt (137)
    on left: 142 143, on right: 137
pointer (138)
    on left: 144 145, on right: 128 145
type_qualifier_list (139)
    on left: 146 147, on right: 134 138 147
parameter_type_list (140)
    on left: 148 149, on right: 136
parameter_list (141)
    on left: 150 151, on right: 148 149 151
parameter_declaration (142)
    on left: 152 153, on right: 150 151
identifier_list (143)
    on left: 154 155, on right: 142 155
type_name (144)
    on left: 156, on right: 14 15 25 33
initialiser (145)
    on left: 157 158 159, on right: 92 160 161
initialiser_list (146)
    on left: 160 161, on right: 14 15 158 159 161
designation_opt (147)
    on left: 162 163, on right: 160 161
designation (148)
    on left: 164, on right: 162
designator_list (149)
    on left: 165 166, on right: 164 166
designator (150)
    on left: 167 168, on right: 165 166
statement (151)
    on left: 169 170 171 172 173 174, on right: 175 176 177 184 188
    189 190 191 192 193 194
labeled_statement (152)
    on left: 175 176 177, on right: 169
compound_statement (153)
    on left: 178, on right: 170 203
block_item_list_opt (154)
    on left: 179 180, on right: 178
block_item_list (155)
    on left: 181 182, on right: 179 182
block_item (156)
    on left: 183 184, on right: 181 182
expression_statement (157)
    on left: 185, on right: 171
expression_opt (158)
    on left: 186 187, on right: 185 193 194 198
selection_statement (159)
    on left: 188 189 190, on right: 172
iteration_statement (160)
    on left: 191 192 193 194, on right: 173
jump_statement (161)
    on left: 195 196 197 198, on right: 174
translation_unit (162)
    on left: 199 200, on right: 0 200
external_declaration (163)
    on left: 201 202, on right: 199 200
function_definition (164)
    on left: 203, on right: 201
declaration_list_opt (165)
    on left: 204 205, on right: 203
declaration_list (166)
    on left: 206 207, on right: 204 207


state 0

    0 $accept: . translation_unit $end

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


state 1

   95 storage_class_specifier: AUTO .

    $default  reduce using rule 95 (storage_class_specifier)


state 2

   98 type_specifier: CHAR .

    $default  reduce using rule 98 (type_specifier)


state 3

  123 type_qualifier: CONST .

    $default  reduce using rule 123 (type_qualifier)


state 4

  103 type_specifier: DOUBLE .

    $default  reduce using rule 103 (type_specifier)


state 5

  114 enum_specifier: ENUM . identifier_opt LEFT_CURLY_BRACKET enumerator_list RIGHT_CURLY_BRACKET
  115               | ENUM . identifier_opt LEFT_CURLY_BRACKET enumerator_list COMMA RIGHT_CURLY_BRACKET
  116               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 118 (identifier_opt)

    identifier_opt  go to state 33


state 6

   93 storage_class_specifier: EXTERN .

    $default  reduce using rule 93 (storage_class_specifier)


state 7

  102 type_specifier: FLOAT .

    $default  reduce using rule 102 (type_specifier)


state 8

  126 function_specifier: INLINE .

    $default  reduce using rule 126 (function_specifier)


state 9

  100 type_specifier: INT .

    $default  reduce using rule 100 (type_specifier)


state 10

  101 type_specifier: LONG .

    $default  reduce using rule 101 (type_specifier)


state 11

   96 storage_class_specifier: REGISTER .

    $default  reduce using rule 96 (storage_class_specifier)


state 12

  124 type_qualifier: RESTRICT .

    $default  reduce using rule 124 (type_qualifier)


state 13

   99 type_specifier: SHORT .

    $default  reduce using rule 99 (type_specifier)


state 14

  104 type_specifier: SIGNED .

    $default  reduce using rule 104 (type_specifier)


state 15

   94 storage_class_specifier: STATIC .

    $default  reduce using rule 94 (storage_class_specifier)


state 16

  105 type_specifier: UNSIGNED .

    $default  reduce using rule 105 (type_specifier)


state 17

   97 type_specifier: VOID .

    $default  reduce using rule 97 (type_specifier)


state 18

  125 type_qualifier: VOLATILE .

    $default  reduce using rule 125 (type_qualifier)


state 19

  106 type_specifier: _BOOL .

    $default  reduce using rule 106 (type_specifier)


state 20

  107 type_specifier: _COMPLEX .

    $default  reduce using rule 107 (type_specifier)


state 21

  108 type_specifier: _IMAGINARY .

    $default  reduce using rule 108 (type_specifier)


state 22

  202 external_declaration: declaration .

    $default  reduce using rule 202 (external_declaration)


state 23

   80 declaration: declaration_specifiers . init_declarator_list_opt SEMI_COLON
  203 function_definition: declaration_specifiers . declarator declaration_list_opt compound_statement

    ASTERISK  shift, and go to state 34

    SEMI_COLON  reduce using rule 82 (init_declarator_list_opt)
    $default    reduce using rule 129 (pointer_opt)

    init_declarator_list_opt  go to state 35
    init_declarator_list      go to state 36
    init_declarator           go to state 37
    declarator                go to state 38
    pointer_opt               go to state 39
    pointer                   go to state 40


state 24

   83 declaration_specifiers: storage_class_specifier . declaration_specifiers_opt

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    $default  reduce using rule 88 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 42
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


state 25

   84 declaration_specifiers: type_specifier . declaration_specifiers_opt

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    $default  reduce using rule 88 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 43
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


state 26

  109 type_specifier: enum_specifier .

    $default  reduce using rule 109 (type_specifier)


state 27

   85 declaration_specifiers: type_qualifier . declaration_specifiers_opt

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    $default  reduce using rule 88 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 44
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


state 28

   86 declaration_specifiers: function_specifier . declaration_specifiers_opt

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    $default  reduce using rule 88 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 45
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


state 29

    0 $accept: translation_unit . $end
  200 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 46
    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    external_declaration     go to state 47
    function_definition      go to state 31


state 30

  199 translation_unit: external_declaration .

    $default  reduce using rule 199 (translation_unit)


state 31

  201 external_declaration: function_definition .

    $default  reduce using rule 201 (external_declaration)


state 32

  116 enum_specifier: ENUM IDENTIFIER .
  117 identifier_opt: IDENTIFIER .

    LEFT_CURLY_BRACKET  reduce using rule 117 (identifier_opt)
    $default            reduce using rule 116 (enum_specifier)


state 33

  114 enum_specifier: ENUM identifier_opt . LEFT_CURLY_BRACKET enumerator_list RIGHT_CURLY_BRACKET
  115               | ENUM identifier_opt . LEFT_CURLY_BRACKET enumerator_list COMMA RIGHT_CURLY_BRACKET

    LEFT_CURLY_BRACKET  shift, and go to state 48


state 34

  144 pointer: ASTERISK . type_qualifier_list_opt
  145        | ASTERISK . type_qualifier_list_opt pointer

    CONST     shift, and go to state 3
    RESTRICT  shift, and go to state 12
    VOLATILE  shift, and go to state 18

    $default  reduce using rule 139 (type_qualifier_list_opt)

    type_qualifier           go to state 49
    type_qualifier_list_opt  go to state 50
    type_qualifier_list      go to state 51


state 35

   80 declaration: declaration_specifiers init_declarator_list_opt . SEMI_COLON

    SEMI_COLON  shift, and go to state 52


state 36

   81 init_declarator_list_opt: init_declarator_list .
   90 init_declarator_list: init_declarator_list . COMMA init_declarator

    COMMA  shift, and go to state 53

    $default  reduce using rule 81 (init_declarator_list_opt)


state 37

   89 init_declarator_list: init_declarator .

    $default  reduce using rule 89 (init_declarator_list)


state 38

   91 init_declarator: declarator .
   92                | declarator . ASSIGNMENT initialiser
  203 function_definition: declaration_specifiers declarator . declaration_list_opt compound_statement

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21
    ASSIGNMENT  shift, and go to state 54

    LEFT_CURLY_BRACKET  reduce using rule 205 (declaration_list_opt)
    $default            reduce using rule 91 (init_declarator)

    declaration              go to state 55
    declaration_specifiers   go to state 56
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    declaration_list_opt     go to state 57
    declaration_list         go to state 58


state 39

  127 declarator: pointer_opt . direct_declarator

    IDENTIFIER        shift, and go to state 59
    LEFT_PARENTHESES  shift, and go to state 60

    direct_declarator  go to state 61


state 40

  128 pointer_opt: pointer .

    $default  reduce using rule 128 (pointer_opt)


state 41

   87 declaration_specifiers_opt: declaration_specifiers .

    $default  reduce using rule 87 (declaration_specifiers_opt)


state 42

   83 declaration_specifiers: storage_class_specifier declaration_specifiers_opt .

    $default  reduce using rule 83 (declaration_specifiers)


state 43

   84 declaration_specifiers: type_specifier declaration_specifiers_opt .

    $default  reduce using rule 84 (declaration_specifiers)


state 44

   85 declaration_specifiers: type_qualifier declaration_specifiers_opt .

    $default  reduce using rule 85 (declaration_specifiers)


state 45

   86 declaration_specifiers: function_specifier declaration_specifiers_opt .

    $default  reduce using rule 86 (declaration_specifiers)


state 46

    0 $accept: translation_unit $end .

    $default  accept


state 47

  200 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 200 (translation_unit)


state 48
